--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,29329],[[4,5,6,0,[],[1,19,15766],[],[[7,0,0,[],[1,5027,2087],[]],[8,0,0,[],[1,7115,5584],[]]],[],[2,2,0,0]],[9,10,11,0,[],[1,15786,13542],[],[[12,0,0,[],[1,20617,5635],[]]],[],[1,1,0,0]]],[],[],[3,3,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,52891],[[4,5,6,0,[],[1,20,20895],[],[[7,0,0,[],[1,5086,4645],[]],[8,0,0,[],[1,9732,8108],[]]],[],[2,2,0,0]],[9,10,11,0,[],[1,20916,15781],[],[[12,0,0,[],[1,25978,7640],[]]],[],[1,1,0,0]],[13,14,15,0,[],[1,36697,16193],[],[[16,0,0,[],[1,41662,8166],[]]],[],[1,1,0,0]]],[],[],[4,4,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*D:\\webcounter\\webcounter\\src\\tests","*src/tests","*Increment","*D:\\webcounter\\webcounter\\src\\tests\\increment.robot","*src/tests/increment.robot","*At start the counter is zero","*When button pressed twice the counter is two","*Reset","*D:\\webcounter\\webcounter\\src\\tests\\reset.robot","*src/tests/reset.robot","*When counter has a nonzero value and it is reset the value becomes zero"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*D:\\webcounter\\src\\tests","*src/tests","*Increment","*D:\\webcounter\\src\\tests\\increment.robot","*src/tests/increment.robot","*At start the counter is zero","*When button pressed twice the counter is two","*New Value","*D:\\webcounter\\src\\tests\\new_value.robot","*src/tests/new_value.robot","*When counter is given a value it becomes the counter's new value","*Reset","*D:\\webcounter\\src\\tests\\reset.robot","*src/tests/reset.robot","*When counter has a nonzero value and it is reset the value becomes zero"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:13","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:29","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":3,"skip":0},{"elapsed":"00:00:16","fail":0,"id":"s1-s1","label":"Tests.Increment","name":"Increment","pass":2,"skip":0},{"elapsed":"00:00:14","fail":0,"id":"s1-s2","label":"Tests.Reset","name":"Reset","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:29","fail":0,"label":"All Tests","pass":4,"skip":0}],[],[{"elapsed":"00:00:53","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":4,"skip":0},{"elapsed":"00:00:21","fail":0,"id":"s1-s1","label":"Tests.Increment","name":"Increment","pass":2,"skip":0},{"elapsed":"00:00:16","fail":0,"id":"s1-s2","label":"Tests.New Value","name":"New Value","pass":1,"skip":0},{"elapsed":"00:00:16","fail":0,"id":"s1-s3","label":"Tests.Reset","name":"Reset","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1763396671812;
+window.output["baseMillis"] = 1763403791347;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 29344;
+window.output["generated"] = 52907;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
